--- a/01-stackMonitoring/prometheus.yml
+++ b/01-stackMonitoring/prometheus.yml
@@ -7,4 +7,13 @@ scrape_configs:
       - targets: ['prometheus:9090']
   - job_name: 'serveurPython'
     static_configs:
-      - targets: ['192.168.1.19:8800']  # Remplacez par l'adresse IP de votre serveur
+      - targets: ['192.168.1.30:8800']  # Remplacez par l'adresse IP de votre serveur
+
+rule_files:
+  - "alerts.yml"
+  
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+            - "alertmanager:9093"  # Nom du conteneur Alertmanager et son port
