--- a/01-stackMonitoring/docker-compose.yml
+++ b/01-stackMonitoring/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - ./alerts.yml:/etc/prometheus/alerts.yml
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
+      - '--web.route-prefix=/'
+      - '--web.external-url=https://192.168.1.30:4433'  
+
     networks: 
       - mynet
 
