--- a/03-reverse/nginx.conf/nginx.conf
+++ b/03-reverse/nginx.conf/nginx.conf
@@ -23,7 +23,8 @@ http {
             proxy_pass http://nginx_exporterPV:9113/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-        }
+            proxy_redirect off;   
+	}
 
         #location /python/ {
         #    proxy_pass http://serveur_python:8800/;
