update fichier pour romtail mais mauvaise branche

--- a/01-stackMonitoring/docker-compose.yml
+++ b/01-stackMonitoring/docker-compose.yml
@@ -57,6 +57,7 @@ services:
     container_name: promtail
     volumes:
       - /var/log:/var/log
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro	
       - ./promtail-config.yaml:/etc/promtail/config.yaml
     command:
       - "-config.file=/etc/promtail/config.yaml"
