--- a/01-stackMonitoring/docker-compose.yml
+++ b/01-stackMonitoring/docker-compose.yml
@@ -2,13 +2,16 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
-    ports:
-      - "9090:9090"
+    #ports:			#A enelver pour que l'on ne voit plus le port HTTP (derriere le reverse proxy)
+    #  - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - ./alerts.yml:/etc/prometheus/alerts.yml
     command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--config.file=/etc/prometheus/prometheus.yml" #Indique l'emplacement du fichier de conf
+      - '--web.route-prefix=/'                         #Indique le prefix de l'url de prometheus. A faire si reverse Proxy
+      - '--web.external-url=https://192.168.1.30:4433' #Url de point d'entree de prometheus. A faire si reverse Proxy 
+
     networks: 
       - mynet
 
@@ -54,6 +57,7 @@ services:
     container_name: promtail
     volumes:
       - /var/log:/var/log
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro	
       - ./promtail-config.yaml:/etc/promtail/config.yaml
     command:
       - "-config.file=/etc/promtail/config.yaml"
@@ -78,5 +82,3 @@ networks:
 
 #    networks:
 #      - monitoring
-
-
